# RoboPoint

./: pyproject.toml
examples/: requirements.txt  robopoint_spot_example.py
robopoint/model/: builder.py
scripts/: robopoint_spot_example.py
