[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "robopoint"
version = "1.0.0"
description = "RoboPoint: a Vision-Language Model for Spatial Affordance Prediction for Robotics"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "tokenizers", "sentencepiece", "shortuuid",
    "accelerate", "peft", "protobuf",
    "pydantic", "markdown2[all]", "scikit-learn",
    "gradio", "gradio_client", "numpy==1.26.4",
    "requests", "httpx", "uvicorn", "fastapi",
    "einops", "einops-exts", "timm",
]

[project.optional-dependencies]
train = ["deepspeed", "ninja", "wandb"]
eval = ["lmms-eval"]

[project.urls]
"Homepage" = "https://robo-point.github.io"
"Bug Tracker" = "https://github.com/wentaoyuan/robopoint/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
